--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "@types/color": "^3.0.3",
         "@types/crypto-js": "^4.2.1",
         "@types/dateformat": "^5.0.0",
+        "@types/global-agent": "^2.1.3",
         "@types/got": "^9.6.12",
         "@types/jest": "^29.5.11",
         "@types/node": "22.8.6",
@@ -95,6 +96,7 @@
         "@types/use-double-click": "^1.0.4",
         "@types/webpack-bundle-analyzer": "^4.4.2",
         "@types/webpack-env": "^1.18.0",
+        "@types/winreg": "^1.2.36",
         "@typescript-eslint/eslint-plugin": "^6.20.0",
         "@typescript-eslint/parser": "^6.20.0",
         "autoprefixer": "^10.4.17",
@@ -170,6 +172,7 @@
         "format-duration": "^3.0.2",
         "framer-motion": "^11.2.6",
         "fs-extra": "^11.2.0",
+        "global-agent": "^3.0.0",
         "got": "^14.4.4",
         "history": "^5.3.0",
         "is-elevated": "^4.0.0",
@@ -201,6 +204,7 @@
         "to-ico": "^1.1.5",
         "use-double-click": "^1.0.5",
         "use-fit-text": "^2.4.0",
+        "winreg": "^1.2.5",
         "yauzl": "^3.2.0"
     },
     "engines": {
