--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "test": "jest",
         "test:unit": "jest ./src/__tests__/unit",
         "publish": "npm run build && electron-builder -c.win.certificateSha1=206941d969c4fa8a0e04d9427def361e13b02fd0 --config electron-builder.config.js --publish always --win --x64",
-        "publish:linux": "npm run build && electron-builder --config electron-builder.config.js --publish never --linux --x64"
+        "publish:linux": "npm run build && electron-builder --config electron-builder.config.js --publish never --linux --x64",
+        "publish:flatpak": "npm run build && env DEBUG='@malept/flatpak-bundler' npx electron-builder --config electron-builder.config.js --publish never --linux flatpak"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
